# OpenEmu-fork

./: .gitignore  LINUX_PORT_PLAN.md  plan.md  thingstofix.md
linux/: CMakeLists.txt
linux/cores/fceu/: CMakeLists.txt  fceu_adapter.cpp  fceu_driver.cpp
linux/cores/mgba/: CMakeLists.txt  flags.h  mgba_adapter.c  version.c
linux/cores/snes9x/: CMakeLists.txt  snes9x_adapter.cpp  snes9x_driver.cpp
linux/include/: oe_audio_backend.h  oe_controller_mapping_dialog.h  oe_core_bridge.h  oe_core_interface.h  oe_cover_art.h  oe_cover_art_dialog.h  oe_edit_game_info_dialog.h  oe_emulator_view.h  oe_game_loop.h  oe_games_api.h  oe_input_backend.h  oe_ipc.h  oe_library_database.h  oe_library_ui.h  oe_preferences_dialog.h
linux/src/: main.cpp  oe_audio_backend.cpp  oe_controller_mapping_dialog.cpp  oe_core_bridge.cpp  oe_core_host.cpp  oe_core_ipc_bridge.cpp  oe_cover_art.cpp  oe_cover_art_dialog.cpp  oe_edit_game_info_dialog.cpp  oe_emulator_view.cpp  oe_game_loop.cpp  oe_games_api.cpp  oe_input_backend.cpp  oe_library_database.cpp  oe_library_ui.cpp  oe_preferences_dialog.cpp
linux/swift-port/: Package.swift  README.md
linux/swift-port/Sources/OELinuxPort/: CoreBridge.swift
linux/swift-port/Sources/OELinuxPort/Backends/: AudioBackend.swift  InputBackend.swift  LinuxPowerManager.swift  SDLAudioBackend.swift  SDLInputBackend.swift
linux/swift-port/Sources/OELinuxPort/Database/: Models.swift  OELibraryDatabase.swift
linux/swift-port/Sources/oe-headless/: main.swift
linux/test/: CMakeLists.txt  audio_input_test.cpp  db_test.cpp  qt_test.cpp  test_harness.c
